Fix missing background

--- a/views/style.css
+++ b/views/style.css
@@ -1,14 +1,14 @@
 
-body {
+/*body {
     overflow: hidden;
-}
+}*/
 
 #particles-js {
     position: absolute;
     width: 100%;
     height: 100%;
     background-color: #000;
-    background-repeat: no-repeat;
+    /*background-repeat: no-repeat;*/
     background-size: cover;
     background-position: 50% 50%;
     z-index: -1;
@@ -22,7 +22,7 @@ body {
     background-color: rgba(255, 255, 255, 0.5);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     position: relative;
-    overflow: hidden;
+    /*overflow: hidden;*/
 }
 
     .container h1 {
